--- a/nadirakhma-portfolio/package.json
+++ b/nadirakhma-portfolio/package.json
@@ -15,7 +15,8 @@
     "lucide-react": "^0.553.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-scroll": "^1.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
